Fixes #270 spacing on basic/framework matches deluxe changes

--- a/templates/basic/css/webstore.css
+++ b/templates/basic/css/webstore.css
@@ -384,7 +384,7 @@ padding:4px 7px;
 #main_panel {
 border:1px solid #bfbfbf;
 height:auto;
-margin:-10px 0 15px;
+margin: 0px 0 15px;
 width:765px;
 }
 
